# cute-parsed-parameters

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  warnings.txt
include/: parser.h
src/: parser.cpp
tests/: longparameters.cpp  longshortkeys.cpp  setnamedparameters.cpp  setparameters.cpp  setparametersempty.cpp
